--- a/MidnightHeist/css/report.css
+++ b/MidnightHeist/css/report.css
@@ -11,7 +11,9 @@ body {
 }
 
 .stats-container {
-	background: rgba(255, 255, 255, 0.1);
+	/*background: #38bcc5f5;
+	background: rgba(83, 152, 152, 0.797); */
+	background: rgba(65,84,84,0.797);
 	border-radius: 15px;
 	padding: 30px;
 	width: 100%;
@@ -31,10 +33,6 @@ body {
 	text-align: center;
 }
 
-/*.win { color: #4CAF50; }*/
-.win { color: #FFBF00; }
-.loss { color: #f44336; }
-
 .stats-grid {
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
@@ -43,7 +41,8 @@ body {
 }
 
 .stat-card {
-	background: rgba(255, 255, 255, 0.05);
+	/*background: rgba(255, 255, 255, 0.05);*/
+	background: rgba(79, 74, 74);
 	border-radius: 10px;
 	padding: 15px;
 	text-align: center;
@@ -61,7 +60,7 @@ body {
 }
 
 .stat-label {
-	color: #a0a0a0;
+	color: #ffffff;
 	font-size: 1.5em;
 }
 .stat-icon {
